add new command

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format:all": "npm run format -- .",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "start:development": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint --fix",
