--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 services:
   api:
-    container_name: 'icc_vmr_ms_signup${NODE_ENV}'
-    image: 'icc_vmr_ms_signup${NODE_ENV}'
+    container_name: 'icc_vmr_ms_signup_${NODE_ENV}'
+    image: 'icc_vmr_ms_signup_${NODE_ENV}'
     environment:
       - NODE_ENV:${NODE_ENV}
     build:
-      context: .
+      context: ./
       dockerfile: Dockerfile
     entrypoint: ['npm', 'run', 'start:${NODE_ENV}']
     env_file:
@@ -17,6 +17,7 @@ services:
       - nesjs-network
     volumes:
       - ./:/usr/src/app
+      - /usr/src/app/node_modules
     restart: unless-stopped
 networks:
   nesjs-network:
